# pytorch_benchmarks

./: README.md  pyproject.toml
src/: main.py
