[tool.poetry]
name = "pytorch_benchmarks"
version = "0.1.0"
description = ""
authors = ["Paul Stey <paulstey@gmail>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5"
torchvision = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
